# quarter04_Hackathone1

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .pa11yci.json  CONTRIBUTING.md  Feature-left.docx  README.md  docker-compose.yml  docusaurus.config.ts  package-lock.json  package.json  playwright.config.ts  sidebars.ts  sp.docx  tsconfig.json  vercel.json
.claude/: settings.local.json
.claude/agents/: auth-security-reviewer.md  book-expert.md  content-translator.md  language-toggle-handler.md
.claude/commands/: create-lab.md  generate-diagram.md  generate-ros2-code.md  generate-simulation-code.md  write-chapter.md
.github/: owasp-suppressions.xml
.github/workflows/: ci.yml  deploy.yml  security.yml
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  fly.toml  nixpacks.toml  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_api.py
docs/: ACCEPTANCE_CRITERIA.md  RUNBOOK.md  SECURITY_AUDIT.md
docs/back-matter/: appendix-a-student-kit.md  appendix-b-cloud-setup.md  appendix-c-repos-docker.md  appendix-d-troubleshooting.md  glossary.md  index.md  safety-ethics.md
docs/front-matter/: foreword.md  introduction.md
docs/module-1-ros2/: ch01-welcome-first-node.md  ch02-sensors-perception.md  (+3 more)
e2e/: auth.spec.ts  chat.spec.ts  navigation.spec.ts
labs/: README.md  docker-compose.yml
labs/module-1/ch03-ros2-deep-dive/: INSTRUCTIONS.md  README.md  package.xml  setup.py
labs/module-1/ch03-ros2-deep-dive/ros2_architecture/: __init__.py  action_node.py  lifecycle_node.py  param_node.py  service_node.py
labs/module-2/ch06-gazebo-world/: INSTRUCTIONS.md  README.md  package.xml  robot_world.sdf  setup.py
labs/module-2/ch06-gazebo-world/gazebo_world/: __init__.py  spawn_robot.py
labs/module-2/ch06-gazebo-world/worlds/: robot_world.sdf
scripts/: audit-accessibility.js  optimize-images.js  validate-content.js  validate-links.js
(+185 files in other folders)
